--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,9 @@ http {
 
     default_type  application/octet-stream;
     include       /etc/nginx/mime.types;
+    log_format main      '$remote_addr - $remote_user [$time_local] '
+                         '"$request" $status $bytes_sent '
+                         '"$http_referer" "$http_user_agent"';
 
     server {
         listen 80;
@@ -29,6 +32,7 @@ http {
 #        listen 5001;
         server_name         _;
         # Proxying connections to application servers
+        access_log   /var/log/nginx.access_log  main;
         location / {
             proxy_pass         http://frontend:8082/;
             proxy_redirect     off;
